@@ -1,3 +1,7 @@
+2020-12-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-11-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Switch to focal, bspm, and r-ci
